Add a registration form and a login form (it's not finished)

--- a/ecommerce-frontend/css/styles.css
+++ b/ecommerce-frontend/css/styles.css
@@ -22,3 +22,11 @@ body {
 .current {
     color: #198754;
 }
+
+#registrationForm label,
+#registrationForm input,
+#registrationForm button {
+    display: block;
+    margin-bottom: 10px;
+}
+
