--- a/ecommerce-frontend/css/styles.css
+++ b/ecommerce-frontend/css/styles.css
@@ -30,3 +30,27 @@ body {
     margin-bottom: 10px;
 }
 
+.product-title-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.product-details-container {
+    display: flex;
+    align-items: flex-start;
+}
+
+.product-image-container {
+    flex: 0 0 600px;
+    margin-right: 10px;
+}
+
+.product-details-content {
+    padding: 80px 0 80px 0;
+    font-size: 23px;
+}
+
+
+
+
+
